--- a/public/err.style.css
+++ b/public/err.style.css
@@ -1,13 +1,24 @@
 body {
   text-align: center;
   font-family: Avenir, Roboto, Helvetica, Arial, sans-serif;
-  color: #2c3e50;
 }
-
+@media (prefers-color-scheme: light) {
+  body{
+    color: #2c3e50;
+  }
+  a{
+    color: rgb(36, 41, 46);
+  }
+}
+@media (prefers-color-scheme: dark) {
+  body{
+    background-color: #0d1117;
+    color: #c9d1d9;
+  }
+  a{
+    color: #eef1f5;
+  }
+}
 h1{
   font-size: 3rem;
-}
-
-a{
-  color: rgb(36, 41, 46);
 }
