Fix font styling

--- a/public/err.style.css
+++ b/public/err.style.css
@@ -1,6 +1,9 @@
 body {
   text-align: center;
-  font-family: Avenir, Roboto, Helvetica, Arial, sans-serif;
+  font-family: Avenir, 'Noto Sans JP', 'Noto Sans CJK JP', Roboto, 'Segoe UI',
+  'BIZ UDPGothic', 'Helvetica Neue', Arial, Helvetica,
+  'Hiragino Kaku Gothic ProN', 'Hiragino Sans', '游ゴシック', 'YuGothic',
+  sans-serif;
 }
 @media (prefers-color-scheme: light) {
   body{
